--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active" style="background-image: url(img/mic.jpg)">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption ">
           <h2 class="display-4">Crash - MIC 2.0</h2>
           <p class="lead">The Best event around! Showcase any of your skills to the world</p>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url(img/ball.jpg)">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption ">
           <h2 class="display-4">Kick-baller</h2>
           <p class="lead">This is a Football event, you know the rules - GO WILD!.</p>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url(img/tech.jpg)">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption">
           <h2 class="display-4">Techbhasa</h2>
           <p class="lead">The Amazing Tech hackathon is back!!.</p>
         </div>
