--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url(img/ball.jpg)">
+      <div class="carousel-item" style="background-image: url(img/Balll.jpg)">
         <div class="carousel-caption ">
           <h2 class="display-4">Kick-baller</h2>
           <p class="lead">This is a Football event, you know the rules - GO WILD!.</p>
